# time-r1

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
data/NQ/: NQ 03-16.Last.txt  NQ 03-19.Last.txt  NQ 03-20.Last.txt  NQ 06-16.Last.txt  NQ 06-17.Last.txt  NQ 09-15.Last.txt  NQ 09-16.Last.txt  NQ 12-15.Last.txt  NQ 12-16.Last.txt
dev/: INTRO.md  PLAN.md
dev/time_r1_paper/: figure1.mmd  figure2.mmd  time_r1_paper.md
examples/: prompt_template_demo.py
scripts/: prepare_ett_data.py  prepare_nq_data.py
src/time_r1/: __init__.py  main.py
src/time_r1/datasets/: __init__.py  loader.py  nq.py
src/time_r1/inference/: filters.py
src/time_r1/prompts/: PromptTemplate.py
src/time_r1/prompts/templates/: .keep  prompt_templates.yaml
src/time_r1/training/: adaptive_weighting.py  checkpointing.py  grip_trainer.py  reward.py  sampling_strategy.py  sft_trainer.py
tests/: test_adaptive_weighting.py  test_checkpointing.py  test_datamodule.py  test_grip_trainer.py  test_loader.py  test_main.py  test_prepare_nq_data.py  test_reward.py  test_sampling_strategy.py
tests/prompts/: test_PromptTemplate.py
tests/training/: test_sft_trainer.py
