[project]
name = "time-r1"
version = "0.1.0"
description = "Time-R1 Paper Python Implementation"
authors = [
    { name = "Mateusz", email = "matdev83@github.com" },
]
dependencies = [
    "pandas",
    "pyarrow",
    "pyyaml",
    "jinja2",
    "torch>=2.2.0",
    "pytorch-lightning>=2.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
